--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
+email: unist.dilab@gmail.com
+author: Donguk Park
+
+title: UNIST DIL Lab
+description: Data Intelligence 연구실 홈페이지입니다.
+theme: jekyll-theme-yat
+
+url: "https://unist-dil.github.io"
+
+markdown: kramdown
+paginate: 5
+
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -40,16 +49,9 @@ author: GitHub User
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+#copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
 
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. https://example.com
-favicon: "" # the favicon for your site
+#favicon: "" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -239,7 +241,6 @@ yat:
 
 # Build settings
 # highlighter: none
-markdown: kramdown
 kramdown:
   input: GFM
 
@@ -249,3 +250,5 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-spaceship
+
+
