--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "Data Intelligence Lab"
+  subheading: "Artificial Intelligence Graduate School, UNIST"
   banner: "Your image url"
