--- a/_config.yml
+++ b/_config.yml
@@ -125,8 +125,9 @@ header_transparent: false
 # Default theme colors as below: 
 # coolblack: #090a0b
 # spacegrey: #353535
-# snowwhite: #ffffff
+
 #
+# theme_color: snowwhite
 # theme_color: snowwhite
 #
 # Custom color as below:
@@ -137,8 +138,10 @@ header_transparent: false
 # orangered: #ff5100
 # greatgold: #f2cb05
 # greenblue: #389092
+unist_navy: #001C54
+unist_emerald: #43C1C3
 #
-# brand_color: orangered
+brand_color: unist_navy
 #
 # Custom color as below:
 # brand_color: "#1a8e42"
@@ -159,7 +162,7 @@ header_transparent: false
 # it will be always kept on every visit (i.e. no matter
 # the browser is closed or not)
 #
-# night_mode: "auto"
+night_mode: "off"
 
 # Code badge setting
 # You can enable or disable the code badge and so on
@@ -235,7 +238,7 @@ header_pages:
 #     background_color: "#34323d"
 #     color: "#bbb"
 
-# Disqus comments
+# Disqus comments # 외부 댓글 플랫폼
 # disqus:
 #   shortname: "Your Disqus username"
 
