--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ copyright: |
   <div> Office: 407-2, Building 106, Ulsan National Institue of Science and Technology, Korea(울산과학기술원 106동 407-2호)</div>
 
 
-#favicon: "" # the favicon for your site
+favicon: "assets/images/logo_dil.png" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
